--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    тест
     <div class="container">
       <header class="top">
         <div class="logo-wrapper">
